--- a/src/templates/emails/partials/footer.hbs
+++ b/src/templates/emails/partials/footer.hbs
@@ -1,7 +1,7 @@
 <tr>
   <td align="center" style="padding: 10px 20px; font-size: 12px; color: #999999; background-color: #f0f0f0;">
     <p style="margin: 0;">
-      {{t "footerNote"}}<br />
+      {{i18n.footer.unsubscribe}}<br />
       &copy; {{year}} {{companyName}}. {{t "allRightsReserved"}}
     </p>
   </td>
